# zipfile2

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.rst  appveyor-install.cmd  appveyor.yml  dev_requirements.txt  dev_requirements26.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yml
.github/workflows/: test.yml
cpython-tests/: README.rst
cpython-tests/3.10/: test_zipfile.py  test_zipfile64.py  test_zipimport.py
cpython-tests/3.11/: test_zipfile.py  test_zipimport.py
cpython-tests/3.12/: test_zipfile64.py  test_zipimport.py
cpython-tests/3.12/test_zipfile/: test_core.py
cpython-tests/3.8/: test_zipfile.py  test_zipfile64.py  test_zipimport.py
cpython-tests/3.9/: test_zipfile.py  test_zipfile64.py  test_zipimport.py
cpython-tests/test_zipfile/: test_core.py
zipfile2/: __init__.py  _lean_zipfile.py  _zipfile.py  common.py
zipfile2/tests/: common.py  test__lean_zipfile.py  test__zipfile.py
