[metadata]
name = zipfile2
version = file: VERSION
url = https://github.com/enthought/pywin32-ctypes
author = Enthought Inc.
author_email = info@enthough.com
description = A (partial) reimplementation of pywin32 using ctypes/cffi
long_description = file: README.rst, CHANGELOG.txt
license = BSD-3-Clause
license_files = file: LICENSE.txt
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = docs*
