[metadata]
name = zipfile2
version = file: VERSION
url = https://github.com/itziakos/zipfile2
author = Ioannis Tziakos
author_email = itziakos@gmail.com
description = An improved ZipFile class that may be used as a 100 % backward compatible replacement.
long_description = file: README.rst, CHANGELOG.txt
license = BSD-3-Clause
license_files = file: LICENSE
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = docs*
